# Automated_research_report_generation

./: README.md  pyproject.toml  requirements.txt  test.ipynb  users.db
generated_report/GenAi_in_Civil_Engineering_20260223_154127/: GenAi_in_Civil_Engineering_20260223_154127.docx
notebook/: test.ipynb
research_and_Analyst/config/: configuration.yaml
research_and_Analyst/exception/: custom_exception.py
research_and_Analyst/logger/: custom_logger.py
research_and_Analyst/prompt_lib/: prompt_locator.py
research_and_Analyst/schemas/: models.py
research_and_Analyst/utils/: config_loader.py  model_loader.py  rate_limiter.py
research_and_Analyst/workflows/: interview_workflow.py  report_generator_workflow.py
